[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crop"
version = "0.0.2"
authors = [{ name = "moutella", email = "joaogabrielmsc@gmail.com" }]
description = "Easy image Cropper CLI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/moutella/crop"
Issues = "https://github.com/moutella/crop/issues"
